--- a/Laboratory_work_2.ipynb
+++ b/Laboratory_work_2.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 140,
    "id": "58facafb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
+       "{'divide': 'ignore', 'over': 'warn', 'under': 'ignore', 'invalid': 'ignore'}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 141,
    "id": "ef67e363",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "4            213             0           0        204"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 142,
    "id": "5bcf456e",
    "metadata": {},
    "outputs": [
@@ -206,28 +206,23 @@
        "4      -0.093065     -0.634324   -0.764953  -0.061798"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "scaler = StandardScaler() # инициализируем объект стандартизации\n",
-    "\n",
     "X_scaled = scaler.fit_transform(X) # изучаем данные\n",
-    "  \n",
     "X_normalized = normalize(X_scaled) # нормализуем данные так, чтобы они были примерны Гауссовскому распределению\n",
-    "\n",
     "X_normalized = pd.DataFrame(X_normalized) # конвертируем numpy массив в pandas DataFrame \n",
-    "\n",
     "X_normalized.columns = X.columns # переименовываем столбцы\n",
-    "  \n",
     "X_normalized.head() # выводим начало полученных данных"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 143,
    "id": "9223b294",
    "metadata": {},
    "outputs": [
@@ -237,7 +232,7 @@
        "OPTICS(min_cluster_size=0.05)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +240,6 @@
    "source": [
     "\"\"\" строим модель кластеризации OPTICS-алгоритма \"\"\"\n",
     "#optics_model = OPTICS(min_samples = 13, xi = 0.0185, min_cluster_size = 0.0255)\n",
-    "#optics_model = OPTICS(min_samples = 12, xi = 0.019, min_cluster_size = 0.03)\n",
     "#optics_model = OPTICS(min_samples = 8, xi = 0.01, min_cluster_size = 0.01)\n",
     "optics_model = OPTICS(min_samples = 5, xi = 0.05, min_cluster_size = 0.05)\n",
     "#optics_model = OPTICS(min_samples = 3, xi = 0.09, min_cluster_size = 0.09)\n",
@@ -256,35 +250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 144,
    "id": "0acd45d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Producing the labels according to the DBSCAN technique with eps = 0.5\n",
-    "#labels1 = cluster_optics_dbscan(reachability = optics_model.reachability_,\n",
-    "#                                   core_distances = optics_model.core_distances_,\n",
-    "#                                   ordering = optics_model.ordering_, eps = 0.5)\n",
-    "  \n",
-    "# Producing the labels according to the DBSCAN technique with eps = 2.0\n",
-    "#labels2 = cluster_optics_dbscan(reachability = optics_model.reachability_,\n",
-    "#                                   core_distances = optics_model.core_distances_,\n",
-    "#                                   ordering = optics_model.ordering_, eps = 2)\n",
-    "  \n",
-    "# Creating a numpy array with numbers at equal spaces till\n",
-    "# the specified range\n",
-    "space = np.arange(len(X_normalized)) # создаем массив для хранения чисел (?)\n",
-    "  \n",
+    "space = np.arange(len(X_normalized)) # создаем массив для хранения чисел\n",
     "reachability = optics_model.reachability_[optics_model.ordering_] # сохраняем расстрояние достижимости каждой точки\n",
-    "  \n",
     "labels = optics_model.labels_[optics_model.ordering_] # сохраняем метки кластера каждой точки\n",
-    "\n",
     "np.savetxt('myfile.csv', labels, delimiter=',') # записываем в файл метки кластера каждой точки"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 145,
    "id": "e5cb2af0",
    "metadata": {},
    "outputs": [
